font fixed and text aligned

--- a/stlye.css
+++ b/stlye.css
@@ -10,7 +10,7 @@ body {
 
 .main-width {
     width: 100%;
-    height: 970px;
+    height: 100vh;
     background-color: #D5E1EF;
 }
 
@@ -18,6 +18,8 @@ body {
     width: 320px;
     background-color: white;
     height: 497px;
+    left: 560px;
+    top: 152px;
     padding: 16px;
     overflow: hidden;
     border-radius: 20px;
@@ -34,12 +36,13 @@ h1 {
     text-align: center;
     font-family: 'Outfit', sans-serif;
     color: #1F314F;
-    font-weight: 700;
+    font-weight: 700px;
     font-size: 22px;
     line-height: 28px;
     margin-top: 22px;
     margin-left: 15px;
-    font-style: normal;  
+    font-style: normal;
+    padding: 0 10px;  
 }
 
 p {
